# corpora

./: Corpora.hs  Corpus.hs  Features.hs  Index.hs  Load.hs  Parse.hs  Query.hs  README  Sort.hs  Strings.hs  Utils.hs  Vector.hs  corpora.cabal  stack.yaml
